# XScript

./: .gitignore  CMakeLists.txt  README.md  license
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/functions/: CMakeLists.txt
android/app/src/main/cpp/functions/headers/: FuncClearConsole.h  FuncInput.h  FuncPrint.h  FuncPrintln.h  FuncSleep.h  FuncToBool.h  FuncToDouble.h  FuncToInteger.h  FuncToString.h
android/app/src/main/cpp/functions/sources/: FuncPrint.cpp  FuncPrintln.cpp  FuncSleep.cpp  FuncToBool.cpp  FuncToDouble.cpp  FuncToInteger.cpp  FuncToString.cpp
android/gradle/wrapper/: gradle-wrapper.properties
console/: CMakeLists.txt  main.cpp  main.dsl
console/functions/: CMakeLists.txt
console/functions/headers/: FuncInput.h  FuncList.h  FuncPrint.h  FuncPrintln.h  FuncToBool.h  FuncToList.h
console/functions/sources/: FuncClearConsole.cpp  FuncInput.cpp  FuncList.cpp  FuncPrint.cpp  FuncPrintln.cpp  FuncSleep.cpp  FuncToBool.cpp  FuncToDouble.cpp  FuncToInteger.cpp  FuncToList.cpp  FuncToString.cpp
core/: CMakeLists.txt
core/headers/: Interpreter.h  InterpreterArgs.h  Lexer.h  Node.h  Parser.h  Token.h
core/headers/exceptions/: Exc.h  ExcExp.h  ExcLexer.h  ExcVar.h
core/headers/expressions/: Exp.h  ExpBlockIf.h  ExpBlockWhile.h  ExpFuncCustom.h  ExpFuncDef.h  ExpLogicalGreaterOrEqual.h  ExpLogicalNot.h  ExpLogicalOr.h  ExpLogicalSmallerOrEqual.h  ExpOpDiv.h  ExpOpMod.h  ExpOpMult.h  ExpValBool.h
core/headers/functions/: FuncCos.h  FuncSin.h  FuncToString.h
core/headers/variables/: Var.h  VarBool.h  VarDouble.h  VarInteger.h  VarList.h  VarString.h
core/sources/: Interpreter.cpp  InterpreterArgs.cpp  Lexer.cpp  Node.cpp  Parser.cpp  Token.cpp
core/sources/exceptions/: Exc.cpp  ExcVar.cpp
core/sources/expressions/: Exp.cpp  ExpBlockIf.cpp  ExpBlockWhile.cpp  ExpFuncCall.cpp  ExpFuncCustom.cpp  ExpFuncDef.cpp  ExpLogicalEqual.cpp  ExpLogicalSmaller.cpp  ExpOpAssignVarFunc.cpp  ExpOpDiv.cpp  ExpOpMod.cpp  ExpValBool.cpp  ExpValString.cpp  ExpVarCall.cpp
core/sources/functions/: FuncCos.cpp  FuncSin.cpp  FuncToList.cpp
core/sources/variables/: Var.cpp  VarBool.cpp  VarDouble.cpp  VarInteger.cpp  VarList.cpp  VarString.cpp
qt/: CMakeLists.txt
source/: Lexer.cpp  Lexer.h  Type.h  main.cpp
src/: main.dsl
src/compiler/: main.cpp
src/compiler/headers/: Compiler.h  CompilerArgs.h  Expression.h  ExpressionFunctionCall.h  ExpressionOpDiv.h  ExpressionOpMult.h  ExpressionOpSum.h  ExpressionValDouble.h  ExpressionValInteger.h  Interpreter.h  Lexer.h  Node.h  Parser.h  Token.h  TokenType.h  Type.h  Variable.h
src/compiler/headers/exception/: ExcLexer.h  ExcParser.h  ExceptionLexer.h  ExceptionParser.h
src/compiler/headers/exceptions/: ExcExp.h  ExcParser.h  ExcVar.h
src/compiler/headers/expression/: ExpBlock.h  ExpBlockWhile.h  ExpFuncCall.h  ExpFuncDef.h  ExpLogicalAnd.h  ExpLogicalEqual.h  ExpLogicalGreaterOrEqual.h  ExpLogicalOr.h  ExpLogicalSmallerOrEqual.h  ExpOpAssignVarFunc.h  ExpOpMult.h  ExpOpSub.h  ExpOpSum.h  ExpValBool.h  ExpValDouble.h  ExpValString.h  Expression.h  ExpressionCodeBlock.h  ExpressionFunctionCall.h  ExpressionFunctionDef.h  ExpressionIf.h  ExpressionOpAssignment.h  ExpressionOpDiv.h  ExpressionOpEqual.h  ExpressionOpGreater.h  ExpressionOpGreaterOrEqual.h  ExpressionOpLogicalAnd.h  ExpressionOpLogicalOr.h  ExpressionOpMult.h  ExpressionOpNot.h  ExpressionOpNotEqual.h  ExpressionOpSmaller.h  ExpressionOpSmallerOrEqual.h  ExpressionOpSub.h  ExpressionOpSum.h  ExpressionValBool.h  ExpressionValDouble.h  ExpressionValInteger.h  ExpressionValString.h  ExpressionVarCall.h  (+2 more)
src/compiler/headers/expressions/: Exp.h  ExpBlock.h  ExpBlockIf.h  ExpBlockWhile.h  ExpFuncCall.h  ExpFuncCustom.h  ExpFuncDef.h  ExpLogicalAnd.h  ExpLogicalEqual.h  ExpLogicalGreater.h  ExpLogicalGreaterOrEqual.h  ExpLogicalNot.h  ExpLogicalNotEqual.h  ExpLogicalOr.h  ExpLogicalSmaller.h  ExpLogicalSmallerOrEqual.h  ExpOpAssignVar.h  ExpOpAssignVarFunc.h  ExpOpDiv.h  ExpOpMult.h  ExpOpSub.h  ExpOpSum.h  ExpValBool.h  ExpValDouble.h  ExpValInteger.h  ExpValString.h  ExpVarCall.h
src/compiler/headers/functions/: FuncAddToMap.h  FuncClearConsole.h  FuncInput.h  FuncList.h  FuncMap.h  FuncPrint.h  FuncPrintln.h  FuncSleep.h  FuncToBool.h  FuncToDouble.h  FuncToInteger.h  FuncToList.h  FuncToString.h
src/compiler/headers/variable/: Var.h  VarBool.h  VarDouble.h  VarString.h  Variable.h  VariableBool.h  VariableDouble.h  VariableInteger.h  VariableList.h  VariableString.h
src/compiler/headers/variables/: Var.h  VarBool.h  VarDouble.h  VarInteger.h  VarList.h  VarMap.h  VarString.h
src/compiler/sources/: Compiler.cpp  CompilerArgs.cpp  Expression.cpp  ExpressionOpAssignment.cpp  ExpressionOpDiv.cpp  ExpressionOpSub.cpp  ExpressionValDouble.cpp  ExpressionValInteger.cpp  ExpressionVarCall.cpp  ExpressionVarInit.cpp  Interpreter.cpp  InterpreterArgs.cpp  Lexer.cpp  Node.cpp  Parser.cpp  Token.cpp  TokenType.cpp  Type.cpp  Variable.cpp  main.cpp
src/compiler/sources/exception/: ExcParser.cpp  ExceptionLexer.cpp  ExceptionParser.cpp
src/compiler/sources/exceptions/: ExcExp.cpp  ExcLexer.cpp  ExcParser.cpp  ExcVar.cpp
src/compiler/sources/expression/: Exp.cpp  ExpBlockIf.cpp  ExpFuncCall.cpp  ExpFuncCustom.cpp  ExpLogicalAnd.cpp  ExpLogicalGreater.cpp  ExpLogicalGreaterOrEqual.cpp  ExpLogicalSmaller.cpp  ExpOpAssignVarFunc.cpp  ExpOpMult.cpp  ExpValBool.cpp  ExpValDouble.cpp  ExpValInteger.cpp  ExpValString.cpp  ExpVarCall.cpp  Expression.cpp  ExpressionCodeBlock.cpp  ExpressionFunctionCall.cpp  ExpressionFunctionDef.cpp  ExpressionIf.cpp  ExpressionOpAssignment.cpp  ExpressionOpDiv.cpp  ExpressionOpEqual.cpp  ExpressionOpGreater.cpp  ExpressionOpGreaterOrEqual.cpp  ExpressionOpLogicalAnd.cpp  ExpressionOpLogicalOr.cpp  ExpressionOpMult.cpp  ExpressionOpNot.cpp  ExpressionOpNotEqual.cpp  ExpressionOpSmaller.cpp  ExpressionOpSmallerOrEqual.cpp  ExpressionOpSub.cpp  ExpressionOpSum.cpp  ExpressionValBool.cpp  ExpressionValDouble.cpp  ExpressionValInteger.cpp  (+4 more)
(+73 files in other folders)
